# niimpy

./: .buildinfo  .gitignore  .travis.yml  CITATION.cff  Introduction.ipynb  Manual.ipynb  README.md  Reference.ipynb  aalto.py  bumpver.toml  database.ipynb  index.html  niima.py  niimpy.py  objects.inv  pyproject.toml  quick-start.ipynb  requirements-dev.txt  requirements.txt  sampledata-singleuser.sqlite3  searchindex.js  setup.py
_modules/: index.html
_sources/: aware.rst.txt  index.rst.txt  quick-start.ipynb.txt
_static/: documentation_options.js
aware/: index.html
config/: config.ini  config.py
database/: index.html
demo/: student_life_example.ipynb
docs/: Community-rules.rst  How-to-cite.rst  Introduction.ipynb  Makefile  Manual.ipynb  Partners.rst  User_Stories.md  adding-features.ipynb  architecture.rst  aware.rst  basic-transformations.ipynb  conf.py  contributing_guidelines.rst  contribution_guide.ipynb  data-sources.rst  data-streams.rst  database.ipynb  index.rst  input-formats.ipynb  installation.rst  introduction.ipynb  introduction.rst  introduction_old.ipynb  make.bat  preprocessing.ipynb  quick-start.ipynb  requirements.txt  schema.rst  screen.ipynb  see-also.rst  summary-statistics.ipynb  survey.ipynb  test.mbox  user-guide.rst
examples/: EDA.ipynb  mock-survey.csv  read_test.ipynb  surveys.ipynb
genindex/: index.html
niimpy/: Preprocess.py  __init__.py  aalto.py  application.py  battery.py  database.py  filter.py  location.py  noise.py  preprocess.py  read.py  sampledata.py  screen.py  setup_dataframe.py  survey.py  test_basic.py  (+10 more)
(+348 files in other folders)
